# character-training

./: .gitignore  .gitmodules  CHARACTER_TRAINING_RESEARCH_INSIGHTS.md  CLAUDE.md  EVALUATION_RESULTS.md  README.md  behaviors  character_definitions.json  compare_scores.py  complete_agora_evaluation.py  continue_evaluation.py  conversations.db  create_dummy_data.py  create_tidy_dataframe.py  evaluation.json  finetuning_data_all.jsonl  get_results.py  load_judgments.py  pipeline.md  pipeline.py  plan.md  plot_agora_data.py  plot_comparison.py  plot_real_data.py  process_folders.py  pyproject.toml  repo_tree.txt  requirements.txt  revision_iter0.json  run_agora_corrected.sh  run_agora_simple.sh  run_complete_agora_eval.py  run_llm.ipynb  run_scalable_llm_runpod.py  runpod_scaling_test.py  setup.py  temp_runner.py  test_concurrent_vllm.py  test_runpod_lora.py  test_tunnel_sharing.py  (+1 more)
.github/: copilot-instructions.md
auto-eval-gen/: bloom_eval.py  bloom_settings-oversub.yaml  character_definitions.json  config.yaml  create_qwen_configs.py  globals.py  notes.md  plan.md  utils.py
auto_eval_gen/: .gitignore  CHANGELOG.md  README.md  bloom_eval.py  bloom_settings.yaml  bloom_settings_delsyc.yaml  character_definitions.json  chat_with_models.py  config_files.txt  copy_and_debias.py  create_qwen_configs.py  evaluation.json  globals.py  notes.md  plan.md  requirements.txt  revision.json  revision_iter0.json  run_revision.sh  setup.py  transcript_utils.py
auto_eval_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
character-science/: .gitignore
evals/: README.md  (+14 more)
(+10733 files in other folders)
