[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_eval_gen"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "Automatic evaluation generation for AI alignment"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/algorithmic-alignment-lab/character-training"
"Bug Tracker" = "https://github.com/algorithmic-alignment-lab/character-training/issues"

[project.scripts]
run-bloom-pipeline = "auto_eval_gen.scripts.run_parallel_configs:main"
